--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,10 +16,10 @@
         <nav>
           {{#if loggedIn}}
             <a href="/">Home</a>
-            <a href="/dashboard">dashboard</a>
+            <a href="/dashboard">Dashboard</a>
             <button id="logout" class="btn-no-style">logout</button>
           {{else}}
-            <a href="/login">login</a>
+            <a href="/login">Login</a>
           {{/if}}
         </nav>
       </header>
